--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 <body>
 
 	<h1>Sahinur Rahman Laskar</h1>
-	<h3>Will Update Soon.</h3>
+	<br>
+	PhD at NIT Silchar
+	<br>
+	ORCID: <a href="https://orcid.org/0000-0002-8413-2718">https://orcid.org/0000-0002-8413-2718</a>
+
 
 </body>
 </html>
