--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 	ORCID: <a href="https://orcid.org/0000-0002-8413-2718">https://orcid.org/0000-0002-8413-2718</a>
 
     <br>
-    (coming soon)
+    <h1>(coming soon)</h1>h
 </body>
 </html>
