--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 	ORCID: <a href="https://orcid.org/0000-0002-8413-2718">https://orcid.org/0000-0002-8413-2718</a>
 
     <br>
+    <div>
+      <!-- CV link -->
+        <a class="page-link" href="https://sahinurlaskar.github.io/resume.pdf">resume</a>
+    </div>    
     <h1>(coming soon)</h1>h
 </body>
 </html>
