--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 	ORCID: <a href="https://orcid.org/0000-0002-8413-2718">https://orcid.org/0000-0002-8413-2718</a>
 
     <br>
-    <div>
+    <div class="trigger">
       <!-- CV link -->
-        <a class="page-link" href="https://sahinurlaskar.github.io/resume.pdf">resume</a>
-    </div>    
+      <a class="page-link" href="https://sahinurlaskar.github.io/resume.pdf">resume</a>
+    </div>
+
     <h1>(coming soon)</h1>h
 </body>
 </html>
