updated resume name

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <br>
     <div class="trigger">
       <!-- CV link -->
-      <a class="page-link" href="https://sahinurlaskar.github.io/resume.pdf">resume</a>
+      <a class="page-link" href="https://sahinurlaskar.github.io/resume.pdf">My Resume</a>
     </div>
 
-    <h1>(coming soon)</h1>h
+    
 </body>
 </html>
