--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
 <body>
 
 	<h1>Sahinur Rahman Laskar</h1>
+	<div class="trigger">
+      <!-- CV link -->
+      <a class="page-link" href="https://sahinurlaskar.github.io/resume.pdf"> <h2>My Resume</h2></a>
+    </div>
 	<br>
 	PhD at NIT Silchar
 	<br>
 	ORCID: <a href="https://orcid.org/0000-0002-8413-2718">https://orcid.org/0000-0002-8413-2718</a>
-
-    <br>
-    <div class="trigger">
-      <!-- CV link -->
-      <a class="page-link" href="https://sahinurlaskar.github.io/resume.pdf">My Resume</a>
-    </div>
-
-    
+ 
 </body>
 </html>
