--- a/index.html
+++ b/index.html
@@ -1,19 +1,104 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Sahinur Rahman Laskar</title>
+  <title>Sahinur Rahman Laskar</title>
+  <style>
+    /* CSS styles for profile layout */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      background-color: #f7f7f7;
+    }
+
+    h1 {
+      color: #333;
+      text-align: center;
+    }
+
+    .profile {
+      max-width: 600px;
+      margin: 0 auto;
+      background-color: #fff;
+      border-radius: 5px;
+      padding: 20px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    img {
+      display: block;
+      width: 200px;
+      height: 200px;
+      margin: 0 auto;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+
+    h2 {
+      color: #333;
+      text-align: center;
+    }
+
+    h3 {
+      color: #555;
+      margin-bottom: 10px;
+    }
+
+    p {
+      color: #777;
+      margin-bottom: 10px;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    ul li {
+      margin-bottom: 5px;
+    }
+
+    ul li a {
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+    }
+
+    ul li a:hover {
+      color: #555;
+    }
+  </style>
 </head>
 <body>
+  <div class="profile">
 
-	<h1>Sahinur Rahman Laskar</h1>
-	<div class="trigger">
+    <img src="m.jpg" alt="Profile Picture">
+
+    <h2>Sahinur Rahman Laskar</h2>
+
+    <h3>About Me</h3>
+    <p>A Computer Science and Engineering background person. Currently, working as an Assistant Professor in SoCS, UPES, Dehradun. Ph.D (CSE) from NIT Silchar. Research Interests in NLP, Machine Translation, Question and Answering, IR, Deep Learning and Machine Learning. Published several International Conferences, Workshops, Journals and Book Chapters. Preferably, looking for jobs in Academics and R&D.</p>
+
+    <h3>Contact Information</h3>
+    <p>Email: sahinurlaskar.nits@gmail.com / sahinur.laskar@ddn.upes.ac.in </p>
+    <p>Phone: +91-7002460508</p>
+
+    <h3>Social Media</h3>
+    <ul>
+      <li><a href="https://www.linkedin.com/in/sahinur-rahman-laskar-0683ab1b0" target="_blank">LinkedIn</a></li>
+      <li><a href="https://www.facebook.com/ersahinur.laskar/" target="_blank">GitHub</a></li>
+    </ul>
+
+    <h3>Visibility</h3>
+    <ul>
+      <li><a href="https://scholar.google.com/citations?user=fbqD9i8AAAAJ&hl=en&authuser=2" target="_blank">Google Scholar</a></li>
+      <li><a href="https://scholar.google.com/citations?user=fbqD9i8AAAAJ&hl=en&authuser=2" target="_blank">ResearchGate</a></li>
+      <li><a href="https://orcid.org/0000-0002-8413-2718" target="_blank">ORCID</a></li>
+    </ul>
+  </div>
+  <div class="trigger">
       <!-- CV link -->
-      <a class="page-link" href="https://sahinurlaskar.github.io/resume.pdf"> <h2>My Resume</h2></a>
+      <a class="page-link" href="https://sahinurlaskar.github.io/resume.pdf"> <h2>Click here to download my Resume</h2></a>
     </div>
-	<br>
-	PhD at NIT Silchar
-	<br>
-	ORCID: <a href="https://orcid.org/0000-0002-8413-2718">https://orcid.org/0000-0002-8413-2718</a>
- 
 </body>
 </html>
