--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <h3>Social Media</h3>
     <ul>
       <li><a href="https://www.linkedin.com/in/sahinur-rahman-laskar-0683ab1b0" target="_blank">LinkedIn</a></li>
-      <li><a href="https://www.facebook.com/ersahinur.laskar/" target="_blank">GitHub</a></li>
+      <li><a href="https://www.facebook.com/ersahinur.laskar/" target="_blank">Facebook</a></li>
     </ul>
 
     <h3>Visibility</h3>
