--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <h3>Visibility</h3>
     <ul>
       <li><a href="https://scholar.google.com/citations?user=fbqD9i8AAAAJ&hl=en&authuser=2" target="_blank">Google Scholar</a></li>
-      <li><a href="https://scholar.google.com/citations?user=fbqD9i8AAAAJ&hl=en&authuser=2" target="_blank">ResearchGate</a></li>
+      <li><a href="https://www.researchgate.net/profile/Sahinur-Laskar" target="_blank">ResearchGate</a></li>
       <li><a href="https://aclanthology.org/people/s/sahinur-rahman-laskar/" target="_blank">ACL Anthology</a></li>
       <li><a href="https://independent.academia.edu/sahinurlaskar" target="_blank">Academia Edu</a></li>
       <li><a href="https://orcid.org/0000-0002-8413-2718" target="_blank">ORCID</a></li>
