--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
       <li><a href="https://aclanthology.org/people/s/sahinur-rahman-laskar/" target="_blank">ACL Anthology</a></li>
       <li><a href="https://independent.academia.edu/sahinurlaskar" target="_blank">Academia Edu</a></li>
       <li><a href="https://dblp.org/pid/247/6547.html" target="_blank">DBLP</a></li>
+      <li><a href="https://ieeexplore.ieee.org/author/37088373605" target="_blank">IEEE Xplore</a></li>
       <li><a href="https://orcid.org/0000-0002-8413-2718" target="_blank">ORCID</a></li>
     </ul>
   </div>
