--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <p>A Computer Science and Engineering background person. Currently, working as an Assistant Professor in SoCS, UPES, Dehradun. Ph.D (CSE) from NIT Silchar. Research Interests in NLP, Machine Translation, Question and Answering, IR, Deep Learning and Machine Learning. Published several International Conferences, Workshops, Journals and Book Chapters. Preferably, looking for jobs in Academics and R&D.</p>
 
     <h3>Contact Information</h3>
-    <p>Email: sahinurlaskar.nits@gmail.com / sahinur.laskar@ddn.upes.ac.in </p>
+    <p>Email: sahinurlaskar.nits@gmail.com / sahinur.laskar@ddn.upes.ac.in / sahinur_rs@cse.nits.ac.in </p>
     <p>Phone: +91-7002460508</p>
 
     <h3>Social Media</h3>
