--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
   </div>
   <div class="trigger">
       <!-- CV link -->
-      <a class="page-link" href="https://sahinurlaskar.github.io/resume.pdf"> <h2>Click here to download my Resume</h2></a>
+      <a class="page-link" href="https://sahinurlaskar.github.io/resume.pdf"> <h2>My Resume</h2></a>
+      <a class="page-link" href="https://sahinurlaskar.github.io/List_publication_SRL.pdf"> <h2>My List of Publications</h2></a>
     </div>
+    
 </body>
 </html>
