--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
   <div class="trigger">
       <!-- CV link -->
       <a class="page-link" href="https://sahinurlaskar.github.io/resume.pdf"> <h2>My Resume</h2></a>
+      <a class="page-link" href="https://sahinurlaskar.github.io/resume_short.pdf"> <h2>My Short Resume</h2></a>
       <a class="page-link" href="https://sahinurlaskar.github.io/List_publication_SRL.pdf"> <h2>My List of Publications</h2></a>
     </div>
     
