--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <ul>
       <li><a href="https://scholar.google.com/citations?user=fbqD9i8AAAAJ&hl=en&authuser=2" target="_blank">Google Scholar</a></li>
       <li><a href="https://www.researchgate.net/profile/Sahinur-Laskar" target="_blank">ResearchGate</a></li>
+      <li><a href="https://vidwan.inflibnet.ac.in/profile/414530" target="_blank">VIDWAN</a></li>
       <li><a href="https://aclanthology.org/people/s/sahinur-rahman-laskar/" target="_blank">ACL Anthology</a></li>
       <li><a href="https://independent.academia.edu/sahinurlaskar" target="_blank">Academia Edu</a></li>
       <li><a href="https://dblp.org/pid/247/6547.html" target="_blank">DBLP</a></li>
