--- a/index.html
+++ b/index.html
@@ -74,10 +74,12 @@
 
     <img src="m.jpg" alt="Profile Picture">
 
-    <h2>Sahinur Rahman Laskar</h2>
+    <h2>Dr. Sahinur Rahman Laskar</h2>
+    <h3>Assistant Professor, UPES, Dehradun, India | NLP Researcher </h3>
+
 
     <h3>About Me</h3>
-    <p>A Computer Science and Engineering background person. Currently, working as an Assistant Professor in SoCS, UPES, Dehradun. Ph.D (CSE) from NIT Silchar. Research Interests in NLP, Machine Translation, Question and Answering, IR, Deep Learning and Machine Learning. Published several International Conferences / Workshops (29), Journals (10), Book Chapters (2) and Patents (2). Preferably, looking for jobs in Academics and R&D.</p>
+    <p>A Computer Science and Engineering background person. Currently, working as an Assistant Professor in SoCS, UPES, Dehradun. Ph.D (CSE) from NIT Silchar. Research Interests in NLP, Machine Translation, Question and Answering, IR, Deep Learning and Machine Learning. Published several International Conferences / Workshops (29), Journals (11), Book Chapters (2) and Patents (2). Preferably, looking for jobs in Academics and R&D.</p>
 
     <h3>Contact Information</h3>
     <p>Email: sahinurlaskar.nits@gmail.com / sahinur.laskar@ddn.upes.ac.in / sahinur_rs@cse.nits.ac.in </p>
